# xbrain-capstone-cdo5

./: .gitignore  README-SETUP.md  README.md  curveball-responses.md  individual-pitches.md  retrospective.md  standup-notes.md
.github/workflows/: _reusable-ci-python-app.yml  _reusable-tf-apply.yml  _reusable-tf-plan.yml  _reusable-update-argocd.yml  ci-ai-engine.yml  ci-manifests.yml  ci-platform-service.yml  ci-simulator.yml  infra-pipeline.yml  pr-security-scan.yml  promote-to-prod.yml  sandbox-ai.yaml  sandbox-platform.yaml
app/: README.md  docker-compose.yml
app/ingest-lambda/: index.py
app/platform-service/: config.py  dependencies.py  main.py  requirements.txt
app/worker-app/: README.md  pyproject.toml
app/worker-app/src/cdo_correlator/: correlate.py
app/worker-app/src/cdo_evidence_builder/: builder.py
app/worker-app/src/cdo_storage/: __init__.py  json_store.py
app/worker-app/src/cdo_triage_context_builder/: __init__.py  builder.py  cli.py
apps/: docker-compose.yml  run_demo.py
apps/ingest-lambda/: Dockerfile
apps/platform-service/: .env.example  .gitignore  Makefile  config.py  dependencies.py  main.py
apps/simulator/: main.py
apps/worker-app/: .dockerignore  Dockerfile
docs/: 01_requirements_analysis.md  02_infra_design.md  03_security_design.md  04_deployment_design.md  05_cost_analysis.md  07_test_eval_report.md  08_adrs.md  09_fake_data_scenarios_guide.md  10_pipeline_gaps_report.md  slide.html
infra/: README.md
manifests/argocd/: root.yaml
scripts/: inject_fake_data.py  test_sandbox_alert.py  validate-infra-contract.sh
(+113 files in other folders)
